# learn

./: .aider.chat.history.md  .aider.input.history  README.md
opengl/: CMakeLists.txt  main.cpp  main_3.cpp  mingw64.toolchain.cmake  root_directory.h
qt/qtconcurrent/imagescaling/: CmakeLists.txt  downloaddialog.cpp  downloaddialog.ui
qt/qtconcurrent/primecounter/: main.cpp  mingw64.toolchain.cmake  primecounter.h  primecounter.ui
qt/qtconcurrent/wordcount/: CmakeLists.txt
qt/qtconcurrent/wordcount/doc/src/: qtconcurrent-wordcount.qdoc
test/: .main.cpp.swp  CmakeLists.txt  RingBuffer.h  fbo.h  fboitem.cpp  fboitem.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  mingw64.toolchain.cmake  painteditem.cpp  painteditem.h
